--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer.Contracts/LupusBytes.Azure.EventHubs.LiveExplorer.Contracts.csproj
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer.Contracts/LupusBytes.Azure.EventHubs.LiveExplorer.Contracts.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>LupusBytes.Azure.EventHubs.LiveExplorer.Contracts</RootNamespace>
     </PropertyGroup>
 
 </Project>
