--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/LupusBytes.Azure.EventHubs.LiveExplorer.Client.csproj
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/LupusBytes.Azure.EventHubs.LiveExplorer.Client.csproj
@@ -14,6 +14,10 @@
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.7" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.7" />
         <PackageReference Include="MudBlazor" Version="8.10.0" />
+        <PackageReference Include="TypedSignalR.Client" Version="3.6.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
