--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer/LupusBytes.Azure.EventHubs.LiveExplorer.csproj
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer/LupusBytes.Azure.EventHubs.LiveExplorer.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Azure.Messaging.EventHubs" Version="5.12.2" />
       <PackageReference Include="MudBlazor" Version="8.11.0" />
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.8" />
+      <PackageReference Include="Polly" Version="8.6.2" />
     </ItemGroup>
 
     <ItemGroup>
