--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer/LupusBytes.Azure.EventHubs.LiveExplorer.csproj
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer/LupusBytes.Azure.EventHubs.LiveExplorer.csproj
@@ -1,16 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>09f502f1-4c23-4fed-8606-863aee62de22</UserSecretsId>
     </PropertyGroup>
 
+    <PropertyGroup>
+      <RequiresAspNetWebAssets>true</RequiresAspNetWebAssets>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="Azure.Messaging.EventHubs" Version="5.12.2" />
       <PackageReference Include="MudBlazor" Version="8.15.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.11" />
+      <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.1" />
       <PackageReference Include="Polly" Version="8.6.5" />
     </ItemGroup>
 
